# pixofarm-assignment

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.nginx  README.md  app.py  docker-compose.yml  index.html  index.js  pyproject.toml
backend/: Dockerfile  app.py  common_exceptions.py  dependencies.py  pyproject.toml  redis_connection.py  settings.py
backend/business_logic/: temperature.py
backend/db/: config.py
backend/db/dal/: city.py  continent.py  temperature.py
backend/db/models/: __init__.py
backend/pydantic_models/routers/: city.py
backend/routers/: city.py  continent.py  temperature.py
backend/utils/: sync_async_wrappers.py
backend/weather/: temperature.py
frontend/static/: index.js  style.css
frontend/templates/: index.html
infrastructure/: db.sqlite3  nginx.conf
