[tool.poetry]
name = "pixofarm-assignment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
aiosqlite = "^0.17.0"
SQLAlchemy = "^1.4.27"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
